[gd_scene load_steps=36 format=3 uid="uid://bevipysoafmqn"]

[ext_resource type="Script" uid="uid://bloennjyd7w0s" path="res://mainmenu.gd" id="1_1hpje"]
[ext_resource type="Texture2D" uid="uid://d10a244aqiqlu" path="res://assets/background_cr.png" id="2_rmh5v"]
[ext_resource type="Texture2D" uid="uid://cssvk55f08f76" path="res://assets/background-button-placeholder.png" id="4_7w8cp"]
[ext_resource type="FontFile" uid="uid://cp3jhwoobaa2l" path="res://assets/MinecraftBold-nMK1.otf" id="4_k2su3"]
[ext_resource type="Texture2D" uid="uid://4b4suxm2inrn" path="res://assets/battle.png" id="5_477y6"]
[ext_resource type="Texture2D" uid="uid://g1k33so41uy2" path="res://assets/battle2.png" id="6_rr6bc"]
[ext_resource type="Texture2D" uid="uid://5qenhp85bpro" path="res://assets/background.png" id="7_fmvtp"]
[ext_resource type="Texture2D" uid="uid://chi47sawi87v5" path="res://assets/button.png" id="7_g6vod"]
[ext_resource type="AudioStream" uid="uid://fyuwi3pe8kv4" path="res://cr-music/menumusic.ogg" id="8_noh24"]
[ext_resource type="Texture2D" uid="uid://ho3d1isejw8v" path="res://assets/cards.png" id="9_08oai"]
[ext_resource type="Texture2D" uid="uid://b22ln6nn4auw1" path="res://assets/cards_pressed.png" id="10_4vmqi"]
[ext_resource type="AudioStream" uid="uid://dgieapvcljehv" path="res://cr-music/overtime-sound.mp3" id="11_oapmt"]
[ext_resource type="Texture2D" uid="uid://bmqiwr1880qfp" path="res://assets/arena.png" id="12_37cii"]
[ext_resource type="Texture2D" uid="uid://oju7n7d4q2jg" path="res://assets/banner7.png" id="14_i887n"]
[ext_resource type="Texture2D" uid="uid://b4u2i67qml8ao" path="res://assets/edit.png" id="16_c1sbq"]
[ext_resource type="Texture2D" uid="uid://bsbsae3ycd3xn" path="res://assets/trophy.png" id="17_lq712"]
[ext_resource type="Texture2D" uid="uid://5u84ty5njior" path="res://assets/woodenboard.png" id="19_0phyn"]
[ext_resource type="Texture2D" uid="uid://bcttfy144rjdi" path="res://assets/knight_card.png" id="19_ct3k1"]
[ext_resource type="Texture2D" uid="uid://da4o0jmjuwu66" path="res://assets/magnifying.png" id="19_dj0pb"]
[ext_resource type="Texture2D" uid="uid://j832xi67oxxo" path="res://assets/minipekka_card.png" id="20_5lkr3"]
[ext_resource type="Texture2D" uid="uid://gwkh06xfak1w" path="res://assets/button2red.png" id="20_sgray"]
[ext_resource type="Texture2D" uid="uid://pclia65q4wj2" path="res://assets/giant_card.png" id="21_16ff7"]
[ext_resource type="Texture2D" uid="uid://deeogp8fhmhq5" path="res://assets/musketeer_card.png" id="22_muk6c"]
[ext_resource type="Texture2D" uid="uid://cmnxf3b0jmtid" path="res://assets/archers_card.png" id="23_jt6wn"]
[ext_resource type="Texture2D" uid="uid://bkbf3axticd4y" path="res://assets/minions_card.png" id="24_jpeci"]
[ext_resource type="Texture2D" uid="uid://b77x7spg8f0oq" path="res://assets/arrows_card.png" id="25_wmic7"]
[ext_resource type="Texture2D" uid="uid://cct7bqiksu28i" path="res://assets/fireball_card.png" id="26_rm27p"]
[ext_resource type="Texture2D" uid="uid://brtp7mvireb5e" path="res://assets/elixir.png" id="28_eruai"]
[ext_resource type="Texture2D" uid="uid://w4avihgiwsly" path="res://assets/banner_thing.png" id="29_18w01"]

[sub_resource type="Animation" id="Animation_1xu58"]
resource_name = "Homemenu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1677, 1059)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/CanvasLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ngymb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1677, 1059)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/CanvasLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_aao2b"]
resource_name = "banner"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1689, -1111)]
}

[sub_resource type="Animation" id="Animation_uuftg"]
resource_name = "deck"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1702, 1054)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/CanvasLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1jarx"]
resource_name = "loading"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5054, 1089)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/CanvasLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwfxa"]
_data = {
&"Homemenu": SubResource("Animation_1xu58"),
&"RESET": SubResource("Animation_ngymb"),
&"banner": SubResource("Animation_aao2b"),
&"deck": SubResource("Animation_uuftg"),
&"loading": SubResource("Animation_1jarx")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_1hpje")

[node name="BackgroundCr3" type="Sprite2D" parent="."]
position = Vector2(5052.85, 1102)
scale = Vector2(2.32161, 2.30515)
texture = ExtResource("2_rmh5v")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 3369.0
offset_bottom = 2206.0
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="BackgroundCr" type="Sprite2D" parent="."]
position = Vector2(1688.5, 1101.75)
scale = Vector2(2.31837, 2.28238)
texture = ExtResource("2_rmh5v")

[node name="name" type="Label" parent="."]
offset_left = 252.0
offset_top = 715.0
offset_right = 661.0
offset_bottom = 852.0
theme_override_colors/font_color = Color(1, 0.717647, 0, 1)
theme_override_colors/font_shadow_color = Color(0.294118, 0.180392, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_k2su3")
theme_override_font_sizes/font_size = 100
text = "Test"

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 1429.0
offset_top = 1338.0
offset_right = 1941.0
offset_bottom = 1594.0
texture_normal = ExtResource("7_g6vod")

[node name="Label" type="Label" parent="TextureButton2"]
layout_mode = 0
offset_left = 60.0
offset_top = 76.0
offset_right = 480.0
offset_bottom = 176.0
theme_override_fonts/font = ExtResource("4_k2su3")
theme_override_font_sizes/font_size = 95
text = "BATTLE"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_noh24")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xwfxa")
}
autoplay = "Homemenu"

[node name="BackgroundCr2" type="Sprite2D" parent="."]
position = Vector2(-1696.15, 1098)
scale = Vector2(2.32575, 2.30515)
texture = ExtResource("2_rmh5v")

[node name="Arena" type="Sprite2D" parent="."]
position = Vector2(1684, 822)
scale = Vector2(2, 2)
texture = ExtResource("12_37cii")

[node name="Background" type="Sprite2D" parent="Arena"]
position = Vector2(1677.5, -218.5)
scale = Vector2(1.39087, 0.898438)
texture = ExtResource("7_fmvtp")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1677, 1059)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
visible = false

[node name="loading" type="Sprite2D" parent="Camera2D/CanvasLayer"]
position = Vector2(1657, 2013)
scale = Vector2(4, 4)
texture = ExtResource("4_7w8cp")

[node name="TextureButton" type="TextureButton" parent="Camera2D/CanvasLayer/loading"]
offset_left = 33.0
offset_top = -74.25
offset_right = 417.0
offset_bottom = 293.75
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("5_477y6")
texture_pressed = ExtResource("6_rr6bc")

[node name="Deck" type="TextureButton" parent="Camera2D/CanvasLayer/loading"]
offset_left = -118.0
offset_top = -71.0
offset_right = 245.0
offset_bottom = 286.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("9_08oai")
texture_pressed = ExtResource("10_4vmqi")

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_oapmt")

[node name="Arena2" type="Sprite2D" parent="."]
position = Vector2(5050, 871)
scale = Vector2(2, 2)
texture = ExtResource("12_37cii")

[node name="Label" type="Label" parent="."]
offset_left = 4667.0
offset_top = 284.0
offset_right = 5675.0
offset_bottom = 464.0
theme_override_colors/font_color = Color(1, 0.54902, 0, 1)
theme_override_colors/font_shadow_color = Color(0.294118, 0.117647, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_k2su3")
theme_override_font_sizes/font_size = 180
text = "LOADING..."

[node name="option" type="Sprite2D" parent="."]
position = Vector2(659, 345)
scale = Vector2(2.4, 2.4)
texture = ExtResource("14_i887n")

[node name="BannerDisplay" type="Sprite2D" parent="."]
position = Vector2(646, 348)
scale = Vector2(2.5, 2.5)

[node name="Edit" type="TextureButton" parent="."]
offset_left = 1143.0
offset_top = 566.0
offset_right = 1399.0
offset_bottom = 822.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("16_c1sbq")

[node name="Trophy" type="Sprite2D" parent="."]
position = Vector2(133, 736)
scale = Vector2(0.8, 0.8)
texture = ExtResource("17_lq712")

[node name="Magnifying" type="Sprite2D" parent="."]
position = Vector2(4509, 369)
texture = ExtResource("19_dj0pb")

[node name="Cancel" type="TextureButton" parent="."]
offset_left = 4815.0
offset_top = 1489.0
offset_right = 5327.0
offset_bottom = 1745.0
texture_normal = ExtResource("20_sgray")

[node name="Label" type="Label" parent="Cancel"]
layout_mode = 0
offset_left = 49.0
offset_top = 68.0
offset_right = 469.0
offset_bottom = 202.0
theme_override_fonts/font = ExtResource("4_k2su3")
theme_override_font_sizes/font_size = 100
text = "CANCEL"

[node name="SceneChangeTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Deck" type="Node" parent="."]

[node name="Board" type="Sprite2D" parent="Deck"]
texture_filter = 1
position = Vector2(-1654, 590)
scale = Vector2(70, 70)
texture = ExtResource("19_0phyn")

[node name="Knight" type="Sprite2D" parent="Deck"]
texture_filter = 1
position = Vector2(-2354, 439)
scale = Vector2(15, 15)
texture = ExtResource("19_ct3k1")

[node name="MinPekka" type="Sprite2D" parent="Deck"]
texture_filter = 1
position = Vector2(-1900, 439)
scale = Vector2(15, 15)
texture = ExtResource("20_5lkr3")

[node name="Giant" type="Sprite2D" parent="Deck"]
texture_filter = 1
position = Vector2(-1410, 438)
scale = Vector2(15, 15)
texture = ExtResource("21_16ff7")

[node name="Musketeer" type="Sprite2D" parent="Deck"]
texture_filter = 1
position = Vector2(-955, 440)
scale = Vector2(15, 15)
texture = ExtResource("22_muk6c")

[node name="Archers" type="Sprite2D" parent="Deck"]
texture_filter = 1
position = Vector2(-2352, 943)
scale = Vector2(15, 15)
texture = ExtResource("23_jt6wn")

[node name="Minions" type="Sprite2D" parent="Deck"]
texture_filter = 1
position = Vector2(-1903, 941)
scale = Vector2(15, 15)
texture = ExtResource("24_jpeci")

[node name="Arrows" type="Sprite2D" parent="Deck"]
texture_filter = 1
position = Vector2(-1410, 945)
scale = Vector2(15, 15)
texture = ExtResource("25_wmic7")

[node name="Fireball" type="Sprite2D" parent="Deck"]
texture_filter = 1
position = Vector2(-956, 940)
scale = Vector2(15, 15)
texture = ExtResource("26_rm27p")

[node name="Elixir" type="Sprite2D" parent="Deck"]
texture_filter = 1
position = Vector2(-904, 1367)
scale = Vector2(20, 20)
texture = ExtResource("28_eruai")

[node name="avg-elixir" type="Label" parent="Deck"]
offset_left = -997.0
offset_top = 1350.0
offset_right = -827.0
offset_bottom = 1450.0
theme_override_fonts/font = ExtResource("4_k2su3")
theme_override_font_sizes/font_size = 100
text = "3.5"

[node name="Label" type="Label" parent="Deck"]
offset_left = -2227.0
offset_top = 1241.0
offset_right = -723.0
offset_bottom = 1492.0
theme_override_fonts/font = ExtResource("4_k2su3")
theme_override_font_sizes/font_size = 60
text = "Troops are placed by pressing a 
number key (1â€“8) 
to select a card, then left-
clicking on a valid arena spot."

[node name="Magnify" type="Sprite2D" parent="Deck"]
position = Vector2(-2389, 1358)
texture = ExtResource("19_dj0pb")

[node name="Banners" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Banners"]
texture_filter = 1
position = Vector2(-306, 1030)
scale = Vector2(40, 40)
texture = ExtResource("29_18w01")

[node name="Sprite2D2" type="Sprite2D" parent="Banners"]
texture_filter = 1
position = Vector2(-3058, 1038)
scale = Vector2(40, 40)
texture = ExtResource("29_18w01")

[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/loading/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/loading/Deck" to="." method="_on_deck_pressed"]
[connection signal="pressed" from="Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_cancel_pressed"]
[connection signal="timeout" from="SceneChangeTimer" to="." method="_on_scene_change_timer_timeout"]
